src/objects/Defect__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Compare_Date__c</fullName>
        <formula>NOW() - Count_Compare_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Compare Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_Compare_Value__c</fullName>
        <formula>IF(
   ISPICKVAL( Count_Total_Time_Unit__c, &quot;Day&quot;),1*  Count_Total_Time_as_Num__c ,
   IF(ISPICKVAL(Count_Total_Time_Unit__c, &quot;Week&quot;),7* Count_Total_Time_as_Num__c,
      IF(ISPICKVAL(Count_Total_Time_Unit__c, &quot;Month&quot;),30* Count_Total_Time_as_Num__c,
         IF(ISPICKVAL(Count_Total_Time_Unit__c, &quot;Year&quot;),365* Count_Total_Time_as_Num__c,0)  
        )
      )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Compare Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Total_Time_Unit__c</fullName>
        <label>Count Total Time Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_Total_Time__c</fullName>
        <label>Count Total Time</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Total_Time_as_Num__c</fullName>
        <label>Count Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Total__c</fullName>
        <description>This needs to be deleted.</description>
        <label>Count Total</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Total_as_Num__c</fullName>
        <label>Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defect_Catagory__c</fullName>
        <label>Defect Catagory</label>
        <picklist>
            <picklistValues>
                <fullName>Val1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Category__c</fullName>
        <label>Defect Category</label>
        <picklist>
            <picklistValues>
                <fullName>Val1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Classification__c</fullName>
        <label>Defect Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Val1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Va2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Code__c</fullName>
        <externalId>true</externalId>
        <label>Defect Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Defect_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defect_Description__c</fullName>
        <label>Defect Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Occurance__c</fullName>
        <label>Defect Occurance</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <formula>Name + IF(ISBLANK(Defect_Code__c), &apos;&apos;, &apos;(&apos; + Defect_Code__c + &apos;)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Defect_Total_Count__c</fullName>
        <label>NC Defect Total Count</label>
        <summaryForeignKey>NC_Product_Defect__c.Defect__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NC_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Count__c</fullName>
        <label>Process Count</label>
        <summaryForeignKey>Process_Defect__c.Defect__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>Product_Defect__c.Defect__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Risk_Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Severity</label>
        <referenceTo>Risk_Severity__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspect_Enabled__c</fullName>
        <label>Suspect Enabled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Needs to be deleted.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_Compare_Date__c</fullName>
        <formula>NOW() - Volume_Compare_Value__c</formula>
        <label>Volume Compare Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Volume_Compare_Value__c</fullName>
        <formula>IF(
   ISPICKVAL(Volume_Total_Time_Unit__c, &quot;Day&quot;),1* Volume_Total_Time_as_Num__c,
   IF(ISPICKVAL(Volume_Total_Time_Unit__c, &quot;Week&quot;),7* Volume_Total_Time_as_Num__c,
      IF(ISPICKVAL(Volume_Total_Time_Unit__c, &quot;Month&quot;),30* Volume_Total_Time_as_Num__c,
         IF(ISPICKVAL(Volume_Total_Time_Unit__c, &quot;Year&quot;),365* Volume_Total_Time_as_Num__c,0)  
        )
      )
)</formula>
        <label>Volume Compare Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Total_Time_Unit__c</fullName>
        <label>Volume Total  Time Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_Total_Time__c</fullName>
        <label>Volume Total Time</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Total_Time_as_Num__c</fullName>
        <label>Volume Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Total__c</fullName>
        <label>Volume Total</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Total_as_Num__c</fullName>
        <label>Volume Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Defect_Code__c</columns>
        <columns>NC_Type__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_Classification__c</columns>
        <columns>Suspect_Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Defect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>